--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Insert lion roaring here">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Due to techinical difficulty, imagine a lion just woke up from the world most comfortable nap and took the deepest yawing you've ever witnessed" title="Lion rawr XD">
   </body>
 </html>
